--- a/app/src/main/res/layout/item_superhero.xml
+++ b/app/src/main/res/layout/item_superhero.xml
@@ -43,6 +43,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+        <TextView
+            android:id="@+id/vrijednost"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"/>
+
 
     </LinearLayout>
 
